[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/textures/square_01.png" type="Texture2D" id=1]
[ext_resource path="res://data/jumpPad/jumpPad.gd" type="Script" id=2]

[sub_resource type="BoxShape3D" id=1]
extents = Vector3( 1.5, 0.25, 1.5 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 2, 2 )

[sub_resource type="StandardMaterial3D" id=3]
flags_transparent = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.29
albedo_color = Color( 0.141176, 0.521569, 0.372549, 0.388235 )
albedo_texture = ExtResource( 1 )
emission_enabled = true
emission = Color( 0.266667, 0.603922, 0.360784, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[node name="jumpPad" type="Area3D"]
collision_layer = 4096
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 1 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.05, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_shape_entered" from="." to="." method="_on_jumpPad_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_jumpPad_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
